@@ -1,24 +1,7 @@
-//buildscript {
-//    ext {
-//        opensearch_version = System.getProperty("opensearch.version", "2.0.0-SNAPSHOT")
-//    }
-//
-//    repositories {
-//        //mavenLocal()
-//        maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
-//        mavenCentral()
-//    }
-//
-////    dependencies {
-////        classpath "org.opensearch.gradle:build-tools:${opensearch_version}"
-////    }
-//}
-
 plugins {
     id 'java'
 }
 
-//apply plugin: 'opensearch.opensearchplugin'
 
 ext {
     projectSubstitutions = [:]
@@ -26,20 +9,18 @@ ext {
     noticeFile = rootProject.file('NOTICE.txt')
 }
 
-//opensearchplugin {
-//    description 'The S3 repository plugin adds S3 repositories'
-//    classname 'IndependentPlugin'
-//}
 
 apply plugin: 'application'
 
-mainClassName = 'IndependentPlugin'
+mainClassName = 'transportservice.RunPlugin'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
-    maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
+    mavenLocal()
+    // Remove the commented code below once TransportService is published to maven
+    //maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
     mavenCentral()
 }
 
@@ -47,22 +28,33 @@ dependencies {
     implementation "org.opensearch:opensearch:2.0.0-SNAPSHOT"
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
-//    implementation group: 'io.netty', name: 'netty-all', version: '4.1.5.Final'
-//    implementation group: 'io.netty', name: 'netty-transport-rxtx', version: '4.1.5.Final'
     implementation "io.netty:netty-all:4.1.73.Final"
+    testCompileOnly ("junit:junit:4.13.2") {
+        exclude module : 'hamcrest'
+        exclude module : 'hamcrest-core'
+    }
+    // Keeping it for now. Will remove it later once figure out the right dependencies
 //    implementation "io.netty:netty-buffer:4.1.73.Final"
 //    implementation "io.netty:netty-codec:4.1.73.Final"
 //    implementation "io.netty:netty-codec-http:4.1.73.Final"
 //    implementation "io.netty:netty-common:4.1.73.Final"
 //    implementation "io.netty:netty-handler:4.1.73.Final"
 //    implementation "io.netty:netty-resolver:4.1.73.Final"
-//    implementation "io.netty:netty-transport:4.1.73.Final"
+//    implementation "io.netty:netty-transportservice.transport:4.1.73.Final"
     //implementation "org.apache.logging.log4j:log4j-1.2-api:2.17.1"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'javax.xml.bind:jaxb-api:2.2.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation "org.opensearch.test:framework:2.0.0-SNAPSHOT"
 
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs '--enable-preview'
+    systemProperty 'tests.security.manager', 'false'
+    testLogging.showStandardStreams = true
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
 }
